Fixed alignment

--- a/assets/style.css
+++ b/assets/style.css
@@ -33,6 +33,7 @@ body{
 .navbar-top-container{
     width:100%;
     background-color: #383131;
+    color:white;
 }
 
 .navbar-main h1{
